Fixed text overflow at view

--- a/front-end/src/components/Catalog/Catalog.scss
+++ b/front-end/src/components/Catalog/Catalog.scss
@@ -30,9 +30,10 @@
   &__view {
     box-sizing: border-box;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 8px;
-    width: 200px;
+    width: 225px;
     height: 48px;
     padding: 12px 8px;
     border: 1px solid #393939;
